# quantinvest

./: .gitignore  README.md  config.yaml  pyproject.toml
quantinvest/: __init__.py
quantinvest/backtesting/: __init__.py  engine.py  metrics.py  stress_testing.py
quantinvest/factors/: __init__.py  base.py  feature_selection.py  industry_factors.py  style_factors.py  wc
quantinvest/models/: __init__.py  automl.py
quantinvest/optimization/: __init__.py  constraints.py  cvar_optimizer.py  mean_variance.py  robust_optimizer.py
quantinvest/risk/: __init__.py  barra.py  covariance_estimators.py  ewma.py
quantinvest/utils/: __init__.py  config.py  data_processor.py  io.py  plotting.py
